src/test/ui/error-codes/E0004.stderr
error[E0004]: non-exhaustive patterns: `HastaLaVistaBaby` not covered
  --> $DIR/E0004.rs:19:11
   |
LL |     match x { //~ ERROR E0004
   |           ^ pattern `HastaLaVistaBaby` not covered

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0004"
